# Sistema_Alerta_de_Temperatura

./: CMakeLists.txt  LICENSE  README.md
src/: ThermalCamera.cpp  ThermalCamera.h  colormap.h  constants.h  main.cpp
